--- a/src/pages/Profiles/Profiles.css
+++ b/src/pages/Profiles/Profiles.css
@@ -1,13 +1,37 @@
 
-.card-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 1rem;
+.card-container{
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  justify-items: center;
+  margin: 1rem;
 }
-
+@media screen and (max-width: 1500px ) {
+  .card-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+@media screen and (max-width: 1200px ) {
+  .card-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media screen and (max-width: 900px ) {
+  .card-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media screen and (max-width: 600px) {
+  .card-container {
+    display: grid;
+    grid-template-columns:1fr;
+  }
+}
 
 .card {
   width: 18rem;
-  
+  margin-top: 1rem;
 }
+
