style change password and finish signup style

--- a/src/components/ChangePasswordForm/ChangePasswordForm.css
+++ b/src/components/ChangePasswordForm/ChangePasswordForm.css
@@ -1,49 +1,57 @@
-.signup-container {
+.change-password-form {
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
   align-items: center;
   margin-bottom: 50px;
-  
 }
-.name-container{
+
+.old-password-container {
   margin: 1rem 0 0 0;
 }
 
-.name-label {
+.old-password-label {
   margin: 0 5px 0 0;
 }
 
-.email-container {
+.new-password-container {
   margin: 1rem 0 0 0;
 }
 
-.email-label {
+.new-password-label {
   margin: 0 5px 0 0;
 }
 
-.password-container {
+.btn-container {
   margin: 1rem 0 0 0;
 }
 
-.password-label {
-  margin: 0 5px 0 0;
+
+
+.change-password-btn{
+  margin: 0 1rem;
+  color: white;
+  border: none;
+  background-color: #292d5a;
+  border-radius: 5px;
+  box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  margin-top: 15px;
+}
+.change-password-btn:disabled {
+  margin: 0 1rem;
+  color: white;
+  border: none;
+  opacity: 50%;
+  border-radius: 5px;
+  box-shadow: none;
+  margin-top: 15px;
+}
+.change-password-btn:hover{
+  transition-delay: .1s;
+  box-shadow: none;
 }
 
-.confirm-container {
-  margin: 1rem 0 0 0;
-}
-
-.confirm-label {
-  margin: 0 5px 0 0;
-}
-
-.button-container {
-  margin: 1rem 0 0 0;
-  
-}
-
-.signup-btn {
+.cancel-btn {
   margin: 0 1rem;
   color: white;
   border: none;
@@ -53,27 +61,7 @@
   margin-top: 15px;
 }
 
-.signup-btn:hover {
+.cancel-btn:hover {
   transition-delay: .1s;
   box-shadow: none;
-}
-
-
-.cancel-button {
-  margin: 0 1rem;
-  color: white;
-  border: none;
-  background-color: #292d5a;
-  border-radius: 5px;
-  box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  margin-top: 15px;
-}
-
-.cancel-button:hover {
-  transition-delay: .1s;
-  box-shadow: none;
-}
-
-.inputContainer {
-  margin-bottom: 1rem;
 }
