--- a/src/pages/ChangePassword/ChangePassword.css
+++ b/src/pages/ChangePassword/ChangePassword.css
@@ -1,4 +1,4 @@
-.signup-form-main {
+.container-main {
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -7,29 +7,27 @@
   box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.signup-container {
+.change-password-container {
   background-color: #404EED;
   padding: 1.5rem 2.5rem;
   margin: 1.5rem 0 0 0;
   border-radius: 5px;
+  /* box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
   max-width: 35rem;
   min-width: 30rem;
 }
-
-.signup-msg-container {
+.change-passwordAndMsg-container {
   background-color: #404EED;
   max-width: 35rem;
   min-width: 30rem;
 }
 
-.signup {
+.password {
   background-color: #404EED;
 }
-
-.msg{
+.msg {
 
 }
+.change-password-form {
 
-.signup-form {
-  
 }
