--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,26 @@ body {
   background-color: #23272aee;
   color: white;
   font-family: 'Dosis', sans-serif;
+  text-align: center;
 }
 
+.card {
+  background-color: #404EED; 
+  box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.card > img {
+  width: 75%;
+  height: 75%;
+  padding-top: 10px;
+  border-radius: 15%;
+  margin: 0 auto;
+}
+
+.btn {
+  background-color: #292d5a;
+  box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
 .navbar {
   background-color: #404EED;
   color: white;
@@ -18,6 +36,16 @@ body {
   font-weight: bold;
   box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   font-family: 'Raleway', sans-serif;
+}
+
+.navbar-nav {
+  align-items: start;
+}
+.nav-link {
+  display: flex;
+  align-items: center;
+  max-height: 3rem;
+  padding: 1rem;
 }
 
 a {
