--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -1,29 +1,24 @@
-.container {
+.login-main {
   display: flex;
   align-items: center;
   flex-direction: column;
+  
 }
 .login-container {
-
-}
-
-.login-msg-container {
-
-}
-
-.login {
-
-}
-
-.msg{
-
+  background-color: #404EED;
+  padding: 1.5rem 2.5rem;
+  margin: 1.5rem 0 0 0;
+  border-radius: 5px;
+  max-width: 35rem;
+  min-width: 30rem;
+  box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .login-form {
   background-color: #404EED;
-  padding: 1.5rem 2.5rem;
+  padding: .5rem 2.5rem;
   border-radius: 5px;
-  box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  
   max-width: 35rem;
   min-width: 30rem;
 }
