--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,7 @@ a {
   display: flex;
   align-items: center;
   color: white;
+  text-shadow: 2px 2px 1px  rgba(0, 0, 0, 0.2), 0 6px 20px  rgba(0, 0, 0, 0.19);
 }
 
 a:hover {
@@ -68,4 +69,8 @@ body {
   background-image:  linear-gradient(30deg, #292d5a 12%, transparent 12.5%, transparent 87%, #292d5a 87.5%, #292d5a), linear-gradient(150deg, #292d5a 12%, transparent 12.5%, transparent 87%, #292d5a 87.5%, #292d5a), linear-gradient(30deg, #292d5a 12%, transparent 12.5%, transparent 87%, #292d5a 87.5%, #292d5a), linear-gradient(150deg, #292d5a 12%, transparent 12.5%, transparent 87%, #292d5a 87.5%, #292d5a), linear-gradient(60deg, #292d5a77 25%, transparent 25.5%, transparent 75%, #292d5a77 75%, #292d5a77), linear-gradient(60deg, #292d5a77 25%, transparent 25.5%, transparent 75%, #292d5a77 75%, #292d5a77);
   background-size: 80px 140px;
   background-position: 0 0, 0 0, 40px 70px, 40px 70px, 0 0, 40px 70px;
+}
+
+input {
+  border-radius: 5px;
 }
