--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -103,7 +103,7 @@
   width: 35vmin;
   background-color: #404EED;
   box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  border-radius: 4%;
+  border-radius: 19px;
 }
 
 .media-list{
