--- a/src/pages/MovieDetails/MovieDetails.css
+++ b/src/pages/MovieDetails/MovieDetails.css
@@ -1,30 +1,29 @@
-.videogame-detail-container  {
+.movie-detail-container  {
   display: flex;
   justify-content: center;
 }
 
-.videogame-detail-card {
-  width: 25rem;
+.movie-detail-card {
+  width: 40rem;
   display: flex;
   align-items: center;
 }
 
-.videogame-detail-img {
+.movie-detail-img {
   margin: 1rem 0 0 0;
   border-radius: 10px;
-  width: 45vmin;
-  height: 30vmin;
+  width: 30vmin;
 }
 
-.videogame-detail-title {
+.movie-detail-title {
   margin: 1.5rem 0 0 0;
 }
 
-.videogame-overview {
+.movie-overview {
   padding: 1.5rem 2rem 0;
 }
 
-.add-videogame {
+.add-movie {
   margin: 0 1rem 1.5rem;
   color: white;
   border: none;
@@ -35,7 +34,7 @@
   text-decoration-line: none;
 }
 
-.add-videogame:hover {
+.add-movie:hover {
   transition-delay: .1s;
   box-shadow: none;
   text-decoration: none;
