--- a/src/pages/Squad/Squad.css
+++ b/src/pages/Squad/Squad.css
@@ -1,82 +1,30 @@
-.squad {
-  background-color: red;  
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr;
-  gap: 0px 0px;
-  grid-auto-flow: row;
-  justify-items: stretch;
-  grid-template-areas:
-    "squad-info"
-    "squad-media";
-  height: 500px;
-  width: 400px;
-}
-
-.squad-info {  
-  background-color: purple;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-  grid-auto-rows: 1fr;
-  gap: 0px 0px;
-  grid-auto-flow: row;
-  grid-template-areas:
-    "squad-title squad-members-title squad-members-title"
-    "squad-title squad-members squad-members"
-    "creator-edit squad-members squad-members";
-  grid-area: squad-info;
-}
-
-.squad-members-title { 
-  background-color: orange;
-  grid-area: squad-members-title; 
-}
-
-.creator-edit { 
-  background-color: yellow;
-  grid-area: creator-edit; 
-}
-
-.squad-members { 
-  background-color: blue;
-  grid-area: squad-members; 
-}
-
-.squad-title {  
-  background-color: magenta;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-  gap: 0px 0px;
-  grid-auto-flow: row;
-  grid-template-areas:
-    "squad-name"
-    "squad-creator"
-    "squad-pic";
-  grid-area: squad-title;
-}
 img {
-  width: 250px;
-  height: 250px;
+  max-height: 150px;
+  max-width: 150px;
+  border: 5px solid #292d5a;
+  margin: 10px auto;
 }
 
-.squad-name { 
-  background-color: aqua;
-  grid-area: squad-name; 
+.squad-members {
+  font-size: 25px;
+  text-decoration: underline;
 }
 
-.squad-pic {
-  background-color: brown; 
-  grid-area: squad-pic; 
+.member {
+  font-size: 15px;
+  display: flex;
+  margin: 0 auto;
+  flex-direction: column;
 }
 
-.squad-creator { 
-  background-color: grey;
-  grid-area: squad-creator; 
+.mediatitle {
+  font-size: 25px;
+  text-decoration: underline;
 }
 
-.squad-media { 
-  background-color: firebrick;
-  grid-area: squad-media;
- }
+.squad-info {
+  margin: 25px auto;
+  background-color: #404EED;
+  width: fit-content;
+  box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
