minor css update

--- a/src/pages/Squad/Squad.css
+++ b/src/pages/Squad/Squad.css
@@ -27,4 +27,5 @@ img {
   background-color: #404EED;
   width: fit-content;
   box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border-radius: 3%;
 }
