--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -1,5 +1,8 @@
 .profile-name {
   margin: 1.5rem 0 1rem;
+  font-size: 3rem;
+  font-weight: 800;
+  text-shadow: 2px 2px 1px  rgba(0, 0, 0, .6), 0 6px 20px  rgba(0, 0, 0, 0.19);
 }
 
 .card-container{
@@ -79,7 +82,7 @@
 }
 .profile-detail-img {
   border-radius: 10%;
-  box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  width: 30vmin;
 }
 
 .movie-img {
@@ -110,3 +113,26 @@
   margin: 3.5rem 0 0 0;
 }
 
+.profile-edit {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  background-color: #404EED;
+  padding: .25rem 1rem;
+  margin: 1.5rem 0 0 0;
+  border-radius: 5px;
+  box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.profile-edit:hover{
+  
+  border: 2px #b1b1b1;
+  border-radius: 5px;
+  box-shadow: none;
+}
+
+.profile-div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
