--- a/src/App.css
+++ b/src/App.css
@@ -65,11 +65,16 @@ a:hover {
 }
 
 body {
-  background-color: #23272a;
+  background-color:  #0d081e;;
   opacity: 1;
-  background-image:  linear-gradient(30deg, #292d5a 12%, transparent 12.5%, transparent 87%, #292d5a 87.5%, #292d5a), linear-gradient(150deg, #292d5a 12%, transparent 12.5%, transparent 87%, #292d5a 87.5%, #292d5a), linear-gradient(30deg, #292d5a 12%, transparent 12.5%, transparent 87%, #292d5a 87.5%, #292d5a), linear-gradient(150deg, #292d5a 12%, transparent 12.5%, transparent 87%, #292d5a 87.5%, #292d5a), linear-gradient(60deg, #292d5a77 25%, transparent 25.5%, transparent 75%, #292d5a77 75%, #292d5a77), linear-gradient(60deg, #292d5a77 25%, transparent 25.5%, transparent 75%, #292d5a77 75%, #292d5a77);
+  background-image: url(/public/8247.jpg);
+  background-size:100vw;
+  
+  background-repeat: no-repeat;
+  height: fit-content;
+  /*  linear-gradient(30deg, #292d5a 12%, transparent 12.5%, transparent 87%, #292d5a 87.5%, #292d5a), linear-gradient(150deg, #292d5a 12%, transparent 12.5%, transparent 87%, #292d5a 87.5%, #292d5a), linear-gradient(30deg, #292d5a 12%, transparent 12.5%, transparent 87%, #292d5a 87.5%, #292d5a), linear-gradient(150deg, #292d5a 12%, transparent 12.5%, transparent 87%, #292d5a 87.5%, #292d5a), linear-gradient(60deg, #292d5a77 25%, transparent 25.5%, transparent 75%, #292d5a77 75%, #292d5a77), linear-gradient(60deg, #292d5a77 25%, transparent 25.5%, transparent 75%, #292d5a77 75%, #292d5a77);
   background-size: 80px 140px;
-  background-position: 0 0, 0 0, 40px 70px, 40px 70px, 0 0, 40px 70px;
+  background-position: 0 0, 0 0, 40px 70px, 40px 70px, 0 0, 40px 70px; */
 }
 
 input {
