change opacity of navbar and allmedia search container

--- a/src/pages/AllMedia/AllMedia.css
+++ b/src/pages/AllMedia/AllMedia.css
@@ -1,5 +1,5 @@
 .all-media-container {
-  background-color: #404EED;
+  background-color: rgba(64,78,237, 75%);
   padding: 1.5rem 2.5rem;
   margin: 1.5rem 2rem;
   border-radius: 5px;
