--- a/src/App.css
+++ b/src/App.css
@@ -24,8 +24,7 @@ body {
 }
 
 .navbar {
-  background-color: #404EED;
-  color: white;
+  background-color: rgba(64,78,237, 65%);
   box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
