--- a/src/pages/Landing/Landing.css
+++ b/src/pages/Landing/Landing.css
@@ -11,7 +11,7 @@
 }
 
 .user-container {
-  background-color: #404EED;
+  background-color: rgba(64,78,237, 75%);
   padding: 1.5rem 2.5rem;
   border-radius: 5px;
   box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
